codepipeline-for-ecs/template.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  ApplicationName:
    Description: Please specify the application name of the resource
    Type: String
    Default: sample

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 192.168.0.0/24

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.0/27

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.32/27

  ProtectedSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.64/27

  ProtectedSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.96/27

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.128/27

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.160/27

  AllowSourceIp:
    Description: "Required. Please specify the Ip to allow access to the ai text search service."
    Type: String

  ProdTrafficPort:
    Description: "Required. Please specify the port for the blue service."
    Type: Number
    Default: 80

  TestTrafficPort:
    Description: "Required. Please specify the port for the green service."
    Type: Number
    Default: 81

Resources:

  ###################################################
  ## VPCFlowLogs Role
  ###################################################

  VPCFlowLogsRole:
    Type: "AWS::IAM::Role"
    Properties:
      RoleName: !Sub ${ApplicationName}-flowlogs-role
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: !Sub ${ApplicationName}-flowlogs-policy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Sid: "CloudWatchLogsScopedAccess"
                Effect: "Allow"
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:DescribeLogGroups"
                  - "logs:DescribeLogStreams"
                  - "logs:PutLogEvents"
                Resource:
                  - !GetAtt VpcFlowLogsLogGroup.Arn

  ###################################################
  ## ECS Task Execution Role
  ###################################################

  EcsTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub '${ApplicationName}-ecs-task-execution-role'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  ###################################################
  ## ECS Task Role
  ###################################################

  EcsTaskRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: !Sub '${ApplicationName}-ecs-task-role'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              Service:
                - 'ecs-tasks.amazonaws.com'
            Action:
              - 'sts:AssumeRole'
      Path: '/'
      Policies:
        - PolicyName: !Sub '${ApplicationName}-ecs-task-policy'
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Sid: "CloudWatchLogsScopedAccess"
                Effect: "Allow"
                Action:
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource:
                  - !GetAtt EcsServiceLogs.Arn

  ###################################################
  ## CodeBuild Role
  ###################################################

  CodeBuildServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: codebuild.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: CodeBuildPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${ApplicationName}-codebuild-project*"
              - Effect: Allow
                Action:
                  - s3:PutObject
                  - s3:GetObject
                  - s3:GetObjectVersion
                  - s3:GetBucketAcl
                  - s3:GetBucketLocation
                Resource: !Sub arn:${AWS::Partition}:s3:::${ArtifactBucket}/*
              - Effect: Allow
                Action:
                  - ecr:BatchCheckLayerAvailability
                  - ecr:CompleteLayerUpload
                  - ecr:InitiateLayerUpload
                  - ecr:PutImage
                  - ecr:UploadLayerPart
                Resource: !GetAtt ECRRepository.Arn
              - Effect: Allow
                Action:
                  - ecr:GetAuthorizationToken
                Resource: "*"

  ###################################################
  ## CodeDeploy Role
  ###################################################

  CodeDeployServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: codedeploy.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AWSCodeDeployRoleForECS

  ###################################################
  ## CodePipeline Role
  ###################################################

  CodePipelineServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: codepipeline.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: CodePipelinePolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - "codecommit:GetBranch"
                  - "codecommit:GetCommit"
                  - "codecommit:UploadArchive"
                  - "codecommit:GetUploadArchiveStatus"
                  - "codecommit:CancelUploadArchive"
                Resource: !GetAtt CodeCommitRepository.Arn
              - Effect: Allow
                Action:
                  - codebuild:BatchGetBuilds
                  - codebuild:StartBuild
                Resource: !GetAtt  CodeBuildProject.Arn
              - Effect: Allow
                Action:
                  - "codedeploy:CreateDeployment"
                  - "codedeploy:GetDeployment"
                Resource: !Sub arn:${AWS::Partition}:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentgroup:${CodeDeployApplication}/${CodeDeployDeploymentGroup}
              - Effect: Allow
                Action:
                  - "codedeploy:GetDeploymentConfig"
                Resource: "*"
              - Effect: Allow
                Action:
                  - "codedeploy:GetApplication"
                  - "codedeploy:GetApplicationRevision"
                  - "codedeploy:RegisterApplicationRevision"
                Resource: !Sub arn:${AWS::Partition}:codedeploy:${AWS::Region}:${AWS::AccountId}:application:${CodeDeployApplication}
              - Effect: Allow
                Action:
                  - "ecs:RegisterTaskDefinition"
                  - "ecs:TagResource"
                Resource: "*"
              - Effect: Allow
                Action:
                  - s3:*
                Resource:
                  - !Sub ${ArtifactBucket.Arn}
                  - !Sub ${ArtifactBucket.Arn}/*
              - Effect: Allow
                Action:
                  - iam:PassRole
                Resource:
                  - !GetAtt EcsTaskRole.Arn
                  - !GetAtt EcsTaskExecutionRole.Arn

  ###################################################
  ## EventBridge Rule Role
  ###################################################

  EventBridgeRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub ${ApplicationName}-codepipeline-start-rule-role
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: events.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: !Sub ${ApplicationName}-codepipeline-start-rule-policy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - codepipeline:StartPipelineExecution
                Resource: !Sub arn:${AWS::Partition}:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}

  ###################################################
  ## VPC
  ###################################################

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-vpc

  ###################################################
  ## PublicSubnet
  ###################################################

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-public-subnet-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-public-subnet-1c

  ###################################################
  ## IGW
  ###################################################

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-igw

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  ###################################################
  ## RouteTable for PublicSubnet
  ###################################################

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub rtb-${ApplicationName}-public-subnet

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  ###################################################
  ## ProtectedSubnet related resources
  ###################################################

  ProtectedSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref ProtectedSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-protected-subnet-1a

  ProtectedSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref ProtectedSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-protected-subnet-1c

  ###################################################
  ## NGW
  ###################################################

  NatGatewayEIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-ngw-eip

  NatGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-ngw

  ###################################################
  ## RouteTable for ProtectedSubnet
  ###################################################

  ProtectedRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub rtb-${ApplicationName}-protected-subnet

  ProtectedSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ProtectedRouteTable
      SubnetId: !Ref ProtectedSubnet1

  ProtectedSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ProtectedRouteTable
      SubnetId: !Ref ProtectedSubnet2

  DefaultProtectedRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ProtectedRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  ###################################################
  ## PrivateSubnet related resources
  ###################################################

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-private-subnet-1a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-private-subnet-1c

  ###################################################
  ## RouteTable for PrivateSubnet
  ###################################################

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub rtb-${ApplicationName}-private-subnet

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  ###################################################
  ## VPCFlowLogs for CloudWatch
  ###################################################

  VpcFlowLogsLogGroup:
    Type: "AWS::Logs::LogGroup"
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      LogGroupName: !Sub ${ApplicationName}-vpc
      RetentionInDays: 30

  VpcFlowLogsToCWLogs:
    Type: "AWS::EC2::FlowLog"
    Properties:
      ResourceType: "VPC"
      ResourceId: !Ref VPC
      LogFormat: "${version} ${account-id} ${interface-id} ${srcaddr} ${dstaddr} ${srcport} ${dstport} ${protocol} ${packets} ${bytes} ${start} ${end} ${action} ${log-status} ${flow-direction} ${traffic-path} ${pkt-src-aws-service} ${pkt-dst-aws-service}"
      MaxAggregationInterval: 60
      TrafficType: "ALL"
      DeliverLogsPermissionArn: !GetAtt VPCFlowLogsRole.Arn
      LogGroupName: !Ref VpcFlowLogsLogGroup
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-flowlogs-to-cwlogs

  ###################################################
  ## Security Group for ALB
  ###################################################

  ALBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${ApplicationName}-alb-sg
      GroupDescription: 'Security group for alb'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ProdTrafficPort
          ToPort: !Ref ProdTrafficPort
          CidrIp: !Ref AllowSourceIp
          Description: 'Allow HTTP traffic from the alb'
        - IpProtocol: tcp
          FromPort: !Ref TestTrafficPort
          ToPort: !Ref TestTrafficPort
          CidrIp: !Ref AllowSourceIp
          Description: 'Allow HTTP traffic from the alb'
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: 'Allow all outbound traffic'

  ###################################################
  ## Security Group for ECS
  ###################################################

  ECSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${ApplicationName}-ecs-sg
      GroupDescription: 'Security group for ecs'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ProdTrafficPort
          ToPort: !Ref ProdTrafficPort
          SourceSecurityGroupId: !Ref ALBSecurityGroup
          Description: 'Allow HTTP traffic from the alb'
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: 'Allow all outbound traffic'

  ###################################################
  ## ALB
  ###################################################

  ApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub ${ApplicationName}-alb
      Scheme: "internet-facing"
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Type: application

  TargetGroup1:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    UpdateReplacePolicy: Delete
    Properties:
      Name: !Sub ${ApplicationName}-tg-1
      Port: !Ref ProdTrafficPort
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: ip
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: 'true'
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 43200

  TargetGroup2:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub ${ApplicationName}-tg-2
      Port: !Ref ProdTrafficPort
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: ip
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: 'true'
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 43200

  LoadBalancerListener1:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: !Ref ProdTrafficPort
      Protocol: HTTP
      DefaultActions:
        - TargetGroupArn: !Ref 'TargetGroup1'
          Order: 1
          Type: "forward"

  LoadBalancerListener2:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: !Ref TestTrafficPort
      Protocol: HTTP
      DefaultActions:
        - TargetGroupArn: !Ref 'TargetGroup2'
          Order: 1
          Type: "forward"

  ###################################################
  ## CloudWatch Logs for ECS
  ###################################################

  EcsServiceLogs:
    Type: 'AWS::Logs::LogGroup'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Properties:
      LogGroupName: !Sub "/aws/ecs/${ApplicationName}-ecs-service"
      RetentionInDays: 30

  ###################################################
  ## ECR
  ###################################################

  ECRRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Sub "${ApplicationName}-ecr-repository"

  ###################################################
  ## ECS Cluster
  ###################################################

  ECSCluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      ClusterName: !Sub "${ApplicationName}-ecs-cluster"

  ###################################################
  ## ECS Task Definition
  ###################################################

  ECSTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      ContainerDefinitions:
        - Name: !Sub "${ApplicationName}-container"
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRRepository}:latest'
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub "/aws/ecs/${ApplicationName}-ecs-service"
              awslogs-stream-prefix: ecs
              awslogs-region: !Sub ${AWS::Region}
          PortMappings:
            - ContainerPort: !Ref ProdTrafficPort
              HostPort: !Ref ProdTrafficPort
              Protocol: tcp
      Family: !Sub "${ApplicationName}-task-definition"
      Cpu: 256
      Memory: 512
      TaskRoleArn: !GetAtt EcsTaskRole.Arn
      ExecutionRoleArn: !GetAtt EcsTaskExecutionRole.Arn
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        OperatingSystemFamily: LINUX
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-ecs-task-definition

  ###################################################
  ## ECS Service
  ###################################################

  ECSService:
    Type: 'AWS::ECS::Service'
    DependsOn: LoadBalancerListener1
    Properties:
      ServiceName: !Sub "${ApplicationName}-ecs-service"
      DeploymentController:
        Type: CODE_DEPLOY
      Cluster: !Ref ECSCluster
      DesiredCount: 1
      LoadBalancers:
        - TargetGroupArn: !Ref TargetGroup1
          ContainerName: !Sub "${ApplicationName}-container"
          ContainerPort: !Ref ProdTrafficPort
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !Ref ECSSecurityGroup
          Subnets:
            - !Ref ProtectedSubnet1
            - !Ref ProtectedSubnet2
      TaskDefinition: !Ref ECSTaskDefinition

  ###################################################
  ## CodeCommit Repository
  ###################################################

  CodeCommitRepository:
    Type: AWS::CodeCommit::Repository
    Properties:
      RepositoryName: !Sub "${ApplicationName}-repository"

  ###################################################
  ## S3 Bucket for CodePipeline Artifacts
  ###################################################

  ArtifactBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "${ApplicationName}-codepipeline-artifacts-${AWS::AccountId}"

  ###################################################
  ## CodeBuild Project
  ###################################################

  CodeBuildProject:
    Type: AWS::CodeBuild::Project
    Properties:
      Name: !Sub "${ApplicationName}-codebuild-project"
      Source:
        Type: CODEPIPELINE
      Artifacts:
        Type: CODEPIPELINE
      Environment:
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/amazonlinux2-x86_64-standard:5.0
        Type: LINUX_CONTAINER
        EnvironmentVariables:
          - Name: ECR_REPOSITORY_URI
            Value: !GetAtt ECRRepository.RepositoryUri
      ServiceRole: !GetAtt CodeBuildServiceRole.Arn
      Cache:
        Type: LOCAL
        Modes:
          - LOCAL_DOCKER_LAYER_CACHE

  ###################################################
  ## CodeDeploy Application
  ###################################################

  CodeDeployApplication:
    Type: AWS::CodeDeploy::Application
    Properties:
      ApplicationName: !Sub "${ApplicationName}-codedeploy-application"
      ComputePlatform: ECS

  ###################################################
  ## CodeDeploy Deployment Group
  ###################################################

  CodeDeployDeploymentGroup:
    Type: AWS::CodeDeploy::DeploymentGroup
    Properties:
      ApplicationName: !Ref CodeDeployApplication
      DeploymentGroupName: !Sub "${ApplicationName}-codedeploy-deployment-group"
      ServiceRoleArn: !GetAtt CodeDeployServiceRole.Arn
      DeploymentConfigName: CodeDeployDefault.ECSAllAtOnce
      DeploymentStyle:
        DeploymentType: BLUE_GREEN
        DeploymentOption: WITH_TRAFFIC_CONTROL
      BlueGreenDeploymentConfiguration:
        TerminateBlueInstancesOnDeploymentSuccess:
          Action: TERMINATE
          TerminationWaitTimeInMinutes: 5
        DeploymentReadyOption:
          ActionOnTimeout: CONTINUE_DEPLOYMENT
          WaitTimeInMinutes: 0
      ECSServices:
        - ClusterName: !Ref ECSCluster
          ServiceName: !GetAtt ECSService.Name
      LoadBalancerInfo:
        TargetGroupPairInfoList:
          - TargetGroups:
              - Name: !GetAtt TargetGroup1.TargetGroupName
              - Name: !GetAtt TargetGroup2.TargetGroupName
            ProdTrafficRoute:
              ListenerArns:
                - !Ref LoadBalancerListener1
            TestTrafficRoute:
              ListenerArns:
                - !Ref LoadBalancerListener2

  ###################################################
  ## CodePipeline
  ###################################################

  CodePipeline:
    Type: AWS::CodePipeline::Pipeline
    Properties:
      Name: !Sub "${ApplicationName}-codepipeline"
      PipelineType: V2
      RoleArn: !GetAtt CodePipelineServiceRole.Arn
      ArtifactStore:
        Type: S3
        Location: !Ref ArtifactBucket
      Stages:
        - Name: Source
          Actions:
            - Name: Source
              ActionTypeId:
                Category: Source
                Owner: AWS
                Provider: CodeCommit
                Version: 1
              OutputArtifacts:
                - Name: SourceArtifact
              Configuration:
                RepositoryName: !GetAtt CodeCommitRepository.Name
                BranchName: main
                PollForSourceChanges: "false"
        - Name: Build
          Actions:
            - Name: Build
              ActionTypeId:
                Category: Build
                Owner: AWS
                Provider: CodeBuild
                Version: 1
              InputArtifacts:
                - Name: SourceArtifact
              OutputArtifacts:
                - Name: BuildArtifact
              Configuration:
                ProjectName: !Ref CodeBuildProject
        - Name: Deploy
          Actions:
            - Name: Deploy
              ActionTypeId:
                Category: Deploy
                Owner: AWS
                Provider: CodeDeployToECS
                Version: 1
              Configuration:
                ApplicationName: !Ref CodeDeployApplication
                DeploymentGroupName: !Ref CodeDeployDeploymentGroup
                Image1ArtifactName: BuildArtifact
                Image1ContainerName: IMAGE1_NAME
                AppSpecTemplateArtifact: SourceArtifact
                AppSpecTemplatePath: appspec.yml
                TaskDefinitionTemplateArtifact: SourceArtifact
                TaskDefinitionTemplatePath: taskdef.json
              OutputArtifacts: []
              InputArtifacts:
                - Name: SourceArtifact
                - Name: BuildArtifact

  ###################################################
  ## EventBridge Rule for start codepipeline
  ###################################################

  EventBridgeRule:
    Type: AWS::Events::Rule
    Properties:
      Name: !Sub ${ApplicationName}-codepipeline-start-rule
      EventPattern: !Sub |
        {
          "source":["aws.codecommit"],
          "detail-type":["CodeCommit Repository State Change"],
          "resources":[
            "${CodeCommitRepository.Arn}"
          ],
          "detail":
          {
            "event":["referenceCreated","referenceUpdated"],
            "referenceType":["branch"],
            "referenceName":["main"]
          }
        }
      State: ENABLED
      Targets:
        - Id: target-1
          Arn: !Sub arn:${AWS::Partition}:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}
          RoleArn: !GetAtt EventBridgeRole.Arn

Outputs:
  ALBDNSName:
    Description: The DNS name of the Application Load Balancer
    Value: !GetAtt ApplicationLoadBalancer.DNSName

  ECRRepository:
    Description: The ECR Repository for ECS.
    Value: !Ref ECRRepository
